# open-notebook-creator-sdk

./: LICENSE  README.md  pyproject.toml
src/open_notebook_creator_sdk/: __init__.py  codegen.py  creator.py  models.py  testing.py
src/open_notebook_creator_sdk/schemas/: __init__.py  audio_v1.py  chart_spec_v1.py  essay_v1.py  flashcards_v1.py  infographic_v1.py  infographic_v2.py  mindmap_v1.py  slideshow_v1.py  studyguide_v1.py  textbook_v1.py  timeline_v1.py
tests/: test_sdk.py
