[project]
name = "open-notebook-creator-sdk"
version = "0.4.0"
license = "MIT"
description = "Normalized plugin contract for Open Notebook 'Creation' multimodal generators"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.9",
    "packaging>=23.0",
]

[project.optional-dependencies]
esperanto = [
    "esperanto>=2.19",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_notebook_creator_sdk"]
